--- a/cssPrincipal/index.css
+++ b/cssPrincipal/index.css
@@ -360,3 +360,51 @@ footer {
     height: 30px;
     width: 30px;
 }
+
+
+
+footer {
+    background-color: #1c2331;
+    color: white;
+    margin-top: 3.5rem;
+}
+
+.footer2 {
+    margin-top: 9.2rem;
+}
+
+.footer-content2 {
+    display: flex;
+    justify-content: space-between;
+    height: 170px;
+
+}
+
+.footer-section2 {
+    flex: 1;
+    padding: 2rem;
+}
+
+.footer-section2 h3 {
+    margin-bottom: 1rem;
+}
+
+.footer-section2 ul {
+    list-style-type: none;
+    padding: 0;
+    font-size: medium;
+
+}
+
+.footer-section2 ul li {
+    margin-bottom: 0.5rem;
+    font-size: small;
+}
+
+.footer-for2 {
+    background-color: #b71c1c;
+    padding: 5px;
+    text-align: center;
+    position: relative;
+    margin: 0px;
+}
