--- a/style.css
+++ b/style.css
@@ -245,3 +245,10 @@ h6 {
     margin-left: 20px;
     border-radius: 5px;
 }
+
+
+.container_venta {
+    margin-left: 400px;
+    width: 600px;
+    height: 445px;
+}
