--- a/cssPrincipal/cotizacion.css
+++ b/cssPrincipal/cotizacion.css
@@ -26,6 +26,11 @@ a {
     font-size: x-large;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .nav-links {
     font-size: large;
@@ -64,19 +69,21 @@ a {
 
 .car-details {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
-    max-width: 1200px;
+    width: 1200px;
     height: 600px;
-    margin: 2rem auto;
-    background-color: white;
+    background: linear-gradient(to right, rgb(28, 35, 49), rgb(220, 53, 69));
     border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .car-image {
-    flex: 1;
-    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
     width: 50%;
     height: 400px;
 }
@@ -84,13 +91,42 @@ a {
 .car-image img {
     width: 100%;
     height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
 }
+
+.car-info h2 {
+    font-size: 50px;
+    text-align: center;
+    width: 100%;
+    height: fit-content;
+    margin: 0;
+}
+
+.car-info p {
+    font-size: 30px;
+    width: 100%;
+    height: fit-content;
+    margin: 20px;
+}
+
+.car-specs {
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    align-content: space-around;
+}
+
 
 .car-info {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
-    width: 50%;
+    align-items: start;
+    justify-content: center;
+    color: white;
+    margin: 0;
+    width: 60%;
+    height: 550px;
 }
 
 .car-navigation {
@@ -102,17 +138,20 @@ a {
 
 .car-specs {
     display: flex;
-    height: 200px;
+    height: fit-content;
     width: 100%;
     align-content: space-around;
-    margin-top: 2rem;
 }
 
 .spec {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: start;
     text-align: center;
     width: fit-content;
     height: fit-content;
-    padding: 10px;
+    gap: 10px;
 }
 
 .spec-value {
@@ -121,15 +160,16 @@ a {
 }
 
 .spec-label {
-    color: #666;
+    color: white;
     font-size: 0.9rem;
 }
 
 .data {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: column;
+    gap: 40px;
     width: 50%;
     height: 100%;
 }
@@ -179,4 +219,98 @@ footer {
     height: 40px;
     background-color: #b71c1c;
     clip-path: polygon(0 100%, 100% 100%, 100% 0, 80% 50%, 60% 0, 40% 50%, 20% 0, 0 50%);
+}
+
+
+.title-car-section {
+    position: relative;
+    height: 220px;
+    width: 100%;
+    padding-top: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.car-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.marca1 {
+    position: relative;
+    left: 720px;
+    top: -50px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca1 img {
+    width: 120px;
+}
+
+.marca2 {
+    position: relative;
+    left: 1040px;
+    top: -120px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca2 img {
+    width: 70px;
+}
+
+.marca3 {
+    position: relative;
+    left: 1220px;
+    top: -300px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca3 img {
+    width: 150px;
+}
+
+.marca4 {
+    position: relative;
+    left: 450px;
+    top: -460px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca4 img {
+    width: 150px;
+}
+
+.marca5 {
+    position: relative;
+    left: 720px;
+    top: -660px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca5 img {
+    width: 100px;
+}
+
+.marca6 {
+    position: relative;
+    left: 1040px;
+    top: -710px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.marca6 img {
+    width: 70px;
+}
+
+.car-title h2 {
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 60px;
+    font-weight: bolder;
 }
