--- a/cssPrincipal/RegistroCli.css
+++ b/cssPrincipal/RegistroCli.css
@@ -41,7 +41,7 @@ a {
 }
 
 .nav-links .ingresar {
-    background-color: #dc3545;
+    background-color: #b71c1c;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     margin: 0px;
