--- a/cssPrincipal/index.css
+++ b/cssPrincipal/index.css
@@ -14,11 +14,11 @@ header {
     z-index: 100;
 }
 
-nav {
+/* nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 a {
     font-size: x-large;
@@ -53,7 +53,7 @@ a {
 }
 
 .nav-links .ingresar {
-    background-color: #dc3545;
+    background-color: #b71c1c;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     margin: 0px;
@@ -64,7 +64,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
-    background-color: #dc3545;
+    background-color: #b71c1c;
     color: white;
 }
 
@@ -103,8 +103,12 @@ a {
 }
 
 .btn-primary {
-    background-color: #dc3545;
+    background-color: #b71c1c;
     color: white;
+}
+
+.btn-primary:hover {
+    background-color: #db2121;
 }
 
 .btn-secondary {
@@ -258,7 +262,7 @@ a {
     border: 1px solid #dee2e6;
     border-radius: 4px;
     overflow: hidden;
-    background: linear-gradient(to right, rgb(28, 35, 49), rgb(220, 53, 69));
+    background: linear-gradient(to right, rgb(28, 35, 49), #b71c1c);
     border-radius: 15px;
 }
 
@@ -268,7 +272,7 @@ a {
     border: 1px solid #dee2e6;
     border-radius: 4px;
     overflow: hidden;
-    background: linear-gradient(to right, rgb(28, 35, 49), rgb(220, 53, 69));
+    background: linear-gradient(to right, rgb(28, 35, 49), #b71c1c);
     border-radius: 15px;
 }
 
@@ -537,7 +541,7 @@ footer {
 }
 
 .footer2 {
-    margin-top: 9.2rem;
+    margin-top: 0px;
 }
 
 .footer-content2 {
