--- a/style.css
+++ b/style.css
@@ -35,12 +35,17 @@ body {
     height: 100%;
 }
 
+
+.btn-primary:hover {
+    background-color: #db2121;
+}
+
 #sidebar {
     background-color: #1B232C;
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    width: 262px;
+    width: 320px;
 }
 
 .sidebar-item {
@@ -60,8 +65,9 @@ body {
 }
 
 .d-flex .lni {
-    font-size: 40px;
-    margin: 10px;
+    font-size: 60px;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 
 .lni {
@@ -75,7 +81,7 @@ a.sidebar-link {
     padding: .625rem 1.625rem;
     color: #FFF;
     display: block;
-    font-size: 0.9rem;
+    font-size: 1.5rem;
     white-space: nowrap;
     border-left: 3px solid transparent;
 }
@@ -86,15 +92,17 @@ a.sidebar-link:hover {
 }
 
 .sidebar-logo {
+    display: flex;
+    flex-direction: column;
     margin-top: 17px;
 }
 
 .sidebar-logo a {
     color: #FFF;
-    font-size: 1.15rem;
+    font-size: 1.9rem;
     font-weight: 600;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 .sidebar-nav {
@@ -102,30 +110,13 @@ a.sidebar-link:hover {
     flex: 1 1 auto;
 }
 
-button {
+
+#toogle-btn {
     background-color: transparent;
     color: #FFF;
     border: 0px;
     width: 50px;
     height: 50px;
-}
-
-#sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
-    border: solid;
-    border-width: 0 .075rem .075rem 0;
-    content: "";
-    display: inline-block;
-    padding: 2px;
-    right: 1.0rem;
-    top: 1.4rem;
-    transform: rotate(-135deg);
-    transition: all .2s ease-out;
-    color: #FFF;
-}
-
-#sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
-    transform: rotate(45deg);
-    transition: all .2s ease-out;
 }
 
 .avatar {
@@ -160,13 +151,13 @@ button {
 
 .main {
     width: 100%;
-    height: 100%;
+    height: 95%;
 }
 
 h6 {
     color: #FFF;
-    margin: 0px 15px;
-    font-size: small;
+    margin: 0px 40px;
+    font-size: x-large;
 }
 
 .container {
@@ -231,11 +222,13 @@ h6 {
 }
 
 .col-md-8 {
-    margin-bottom: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    height: 449px;
+    width: 80%;
+    margin-left: 140px;
+    margin-bottom: 40px;
+    /* overflow-x: hidden;
+    overflow-y: auto; */
     white-space: nowrap;
+    height: 740px;
 }
 
 .boton-imprimir {
@@ -251,4 +244,129 @@ h6 {
     margin-left: 400px;
     width: 600px;
     height: 445px;
+}
+
+.modal {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(51, 50, 50, 0.75);
+    transition: all .4s;
+}
+
+.modal-content {
+    position: relative;
+    border: 0px;
+    height: auto;
+    width: auto;
+    background: #ffff;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0 0 0 / .15);
+}
+
+.modal-content h2 {
+    margin-top: 20px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    color: #b71c1c;
+}
+
+.modal:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal_close {
+    color: #E60D22;
+    font-size: 2rem;
+}
+
+.login-box {
+    background-color: #ffffff80;
+    border-radius: 10px;
+    border-color: #E60D22;
+    border-width: 10px;
+    border-style: solid;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    position: relative;
+}
+
+.login-box input {
+    display: flex;
+    height: 20px;
+    width: 320px;
+    padding: 12px;
+    margin: 10px;
+    border: 5px solid #ffffff;
+    border-radius: 7px;
+    border-color: #c2bcbc;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.left-column,
+.right-column {
+    flex: 1;
+    margin: 0 10px;
+}
+
+.left-column label,
+.right-column label {
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.login-box label {
+    color: #000000;
+    font-family: 'Poppins', sans-serif;
+}
+
+.login-box input::placeholder {
+    color: #E60D22;
+}
+
+.login-box button {
+    background-color: #E60D22;
+    color: #ffffff;
+    padding: 10px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    height: 60px;
+    width: 355px;
+    font-size: 25px;
+    margin: 20px;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+}
+
+.login-box button:hover {
+    background-color: #ff0000;
 }
