--- a/cssPrincipal/InicioS.css
+++ b/cssPrincipal/InicioS.css
@@ -33,13 +33,26 @@ h2 {
     margin: 0;
 }
 
+.icon-link {
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    top: 5px;
+    left: 5px;
+}
+
+.icon-link img {
+    width: 120px;
+    border-radius: 30px;
+}
+
 .icon-image {
     position: absolute;
     width: 50px;
-    top: 5px;
+    top: 1px;
     left: 0px;
     z-index: 1;
-    margin: 30px;
+    margin: 0px;
 }
 
 .auto_derecha {
