--- a/cssPrincipal/RegistroCli.css
+++ b/cssPrincipal/RegistroCli.css
@@ -19,6 +19,19 @@ nav {
     align-items: center;
 }
 
+.icon-link {
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    top: 5px;
+    left: 5px;
+}
+
+.icon-link img {
+    width: 150px;
+    border-radius: 30px;
+}
+
 
 a {
     font-size: x-large;
