--- a/cssPrincipal/contacto.css
+++ b/cssPrincipal/contacto.css
@@ -57,6 +57,34 @@ a {
     border-radius: 4px;
 }
 
+
+.patitulo {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.titulo-contacto {
+    width: 85%;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 25px solid black;
+    border-top: 25px solid black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+}
+
+.titulo-contacto h1 {
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 60px;
+    font-weight: bolder;
+}
+
 .contact-form {
     background-color: #dc3545;
     color: white;
