--- a/cssPrincipal/equipo.css
+++ b/cssPrincipal/equipo.css
@@ -104,42 +104,67 @@ a {
 }
 
 .empleados {
-    padding: 2rem;
     background-color: #f8f9fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
 }
 
-.empleados h1 {
-    text-align: center;
-    margin-bottom: 2rem;
+
+.titulo-empleados {
+    width: 85%;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 25px solid black;
+    border-top: 25px solid black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+}
+
+.titulo-empleados h1 {
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 60px;
+    font-weight: bolder;
 }
 
 .empleados-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    width: 100%;
 }
 
 .empleado-card {
-    background-color: white;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: 300px;
+    height: 300px;
+    gap: 10px;
 }
 
 .empleado-card img {
-    width: 50%;
-    height: 500px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: 10px solid rgb(28, 35, 49, 0.87);
 }
+
 
 .empleado-card h2 {
     padding: 1rem 1rem 0.5rem;
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 30px;
     color: white;
 }
 
@@ -149,7 +174,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #1c2331;
+    background: linear-gradient(45deg, rgb(28, 35, 49), rgb(220, 53, 69));
+    border-radius: 50px;
 }
 
 footer {
