--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ h1 {
     font-size: 1.5rem;
 }
 
+h3 {
+    margin-bottom: 0px;
+    margin-top: 15px;
+    margin-right: 10px;
+}
+
 html,
 body {
     height: 100%;
@@ -120,8 +126,8 @@ a.sidebar-link:hover {
 }
 
 .avatar {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
 }
 
 .navbar-expand .navbar-nav {
@@ -151,7 +157,7 @@ a.sidebar-link:hover {
 
 .main {
     width: 100%;
-    height: 95%;
+    height: 80%;
 }
 
 h6 {
@@ -224,7 +230,7 @@ h6 {
 .col-md-8 {
     width: 80%;
     margin-left: 140px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     /* overflow-x: hidden;
     overflow-y: auto; */
     white-space: nowrap;
@@ -252,6 +258,23 @@ h6 {
     position: absolute;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(51, 50, 50, 0.75);
+    transition: all .4s;
+}
+
+.modal2 {
+    visibility: visible;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
     left: 0;
     right: 0;
     display: flex;
@@ -369,4 +392,8 @@ h6 {
 
 .login-box button:hover {
     background-color: #ff0000;
+}
+
+#contemp {
+    height: 746px !important;
 }
